tests/errors/semantic/non_blocking/INCOMPATIBLE_TYPES_IN_ASSIGNMENT_2.py
# pylint: disable=missing-function-docstring, missing-module-docstring
import numpy as np

a = np.float32(4)
a += 5.0
